test/classes/generic/queryGenericField2.good
queryGenericField2.chpl:7: In function 'test':
queryGenericField2.chpl:7: error: the type 'R' does not have a generic field 'p2'
